--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,13 +6,26 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Mc.Donalds</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type ="text/css" rel ="stylesheet" href ="css/bootstrap-theme.css">
         <link type ="text/css" rel ="stylesheet" href ="css/bootstrap.css">
+        <link type ="text/css" rel ="stylesheet" href ="css/costom-style.css">
     </head>
     <body>
-        <div>TODO write content</div>
+         <img src="https://pbs.twimg.com/profile_images/453545705622106112/6ERHbJBN.jpeg"  class="img-square">
+         <p>hamBurgers</p>
+         <p>nuggets</p>
+         <p>ice cream</p>
+        <div class="container">
+            <h1>MC.DONAlDS</h1>
+            <div class ="row">
+                <h2>Try our wonderful hamburgers</h2>
+            </div>
+            <div class ="row">
+                <h2>I LOVE CHICKEN NUGGETS!!!!!!!</h2>
+            </div>
+        </div>
     </body>
 </html>
